--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Views App</string>
     <string name="name">Name</string>
     <string name="button">Button</string>
+    <string name="input_text">Masukkan Text</string>
 </resources>
